--- a/flight_delay_prediction.ipynb
+++ b/flight_delay_prediction.ipynb
@@ -4174,7 +4174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "52b1f922",
    "metadata": {},
    "outputs": [
@@ -4193,7 +4193,7 @@
     "import joblib\n",
     "\n",
     "# Save pipeline from randomized search\n",
-    "joblib.dump(best_pipeline, \"flight_delay_model.joblib\")"
+    "joblib.dump(xgb_model, \"flight_delay_model.joblib\")"
    ]
   }
  ],
