--- a/flight_delay_prediction.ipynb
+++ b/flight_delay_prediction.ipynb
@@ -4193,7 +4193,7 @@
     "import joblib\n",
     "\n",
     "# Save pipeline from randomized search\n",
-    "joblib.dump(xgb_model, \"flight_delay_model.joblib\")"
+    "joblib.dump(best_pipeline, \"flight_delay_model.joblib\")"
    ]
   }
  ],
